# paypal-api

./: .dockerignore  .env.example  Dockerfile  README.md  deployment.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/models/: responses.py
app/services/: exchange_rate_service.py  paypal_client.py  rate_limiter.py
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  system-architecture.md
plans/251226-2144-paypal-api-mvp/: plan.md
plans/251229-2028-frontend-integration/: README.md  plan.md
plans/251230-1518-docker-deployment/: phase-01-dockerfile-creation.md  phase-02-docker-compose.md  phase-03-dockerignore.md  phase-04-documentation.md  phase-05-github-actions.md  plan.md
plans/reports/: brainstorm-251226-2114-paypal-api-mvp.md  brainstorm-251229-2028-frontend-integration.md  bugfix-251229-2137-tx-amount-undefined.md  code-reviewer-251230-1544-dockerfile-phase01.md  code-reviewer-251230-1548-dockerfile-revalidation.md  docs-manager-251230-1556-docker-deployment-phase01.md  enhancement-251229-2110-date-range-filter.md  enhancement-251229-2125-detailed-error-logging.md  enhancement-251229-2141-usd-only-display.md  enhancement-251229-2147-table-columns-update.md  feature-251229-2131-usd-currency-conversion.md  feature-251229-2205-kofi-donation-button.md  fix-251229-2106-paypal-date-format.md  fix-251229-2149-date-range-1-year.md  (+3 more)
static/: finance.html  index.html  journey.html
tests/: conftest.py  test_api.py  test_paypal_client.py  test_static_routes.py
(+4 files in other folders)
